--- a/public/assets/manifest.json
+++ b/public/assets/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 2,
     "version": "1.0.0",
-  "short_name": "Isaiae Vox",
-  "name": "Isaiae Vox Platform",
+  "short_name": "Visio DevEkla Project",
+  "name": "Visio DevEkla Project",
 
   "icons": [
     {
