--- a/package.json
+++ b/package.json
@@ -51,11 +51,13 @@
     ]
   },
   "devDependencies": {
+    "@eslint/js": "^9.21.0",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "globals": "^16.0.0",
     "prettier": "^3.5.2"
   }
 }
