--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "core-js": "^3.41.0",
     "dotenv": "^10.0.0",
     "lorem-ipsum": "^2.0.8",
     "os": "^0.1.2",
@@ -22,6 +23,7 @@
     "react-router-dom": "^6.21.1",
     "react-scripts": "^5.0.1",
     "react-spinners": "^0.13.8",
+    "regenerator-runtime": "^0.14.1",
     "socket.io-client": "^4.7.4",
     "styled-components": "^6.1.9",
     "web-vitals": "^2.1.4"
@@ -51,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.26.9",
     "@eslint/js": "^9.21.0",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.0.2",
